// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with icon chosen in cms 1`] = `
.c0 {
  position: relative;
  clear: both;
  background: #f7f7f7;
  padding: 20px;
  margin-bottom: 1em;
  border-left: 4px solid;
  border-color: #EA232D;
}

.c2 {
  display: inline-block;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c1 {
  fill: #212122;
  width: 30px;
  height: 30px;
  margin-right: 1em;
  display: inline-block;
  vertical-align: top;
}

.c1 + div {
  width: calc(100% - 3em);
}

<div
  className="c0"
>
  <test-file-stub
    className="c1"
  />
  <div
    className="c2"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Our advice and support services across the UK give people <b>one-to-one</p>",
      }
    }
  />
</div>
`;

exports[`renders correctly with no options chosen in cms 1`] = `
.c0 {
  position: relative;
  clear: both;
  background: #f7f7f7;
  padding: 20px;
  margin-bottom: 1em;
  border-left: 4px solid;
  border-color: #EA232D;
}

.c1 {
  display: inline-block;
}

.c1 > :last-child {
  margin-bottom: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Our advice and support services across the UK give people <b>one-to-one</p>",
      }
    }
  />
</div>
`;
